# asteroids

./: CMakeLists.txt
include/grv/: bitmap_font.h  color_palette.h  color_rgba.h  common.h  frame_buffer.h  game_state.h  gfxa.h  math.h  recti.h  transform2d.h  vec2f.h  vec2i.h
src/: base_defines.h  basic_font_8x8_impl.c  bitmap_font.c  color_palette.c  color_palette.h  frame_buffer.c  frame_buffer.h  game_state.c  game_state.h  gfxa.c  grv_math.c  grv_math.h  main.c  math.c  on_draw.c  recti.c  recti.h  sin_cos_lut.c  transform2d.c  transform2d.h  vec2f.c  vec2f.h  vec2i.c
test/: profile_sin_cos.c  test_math.c
